RESOLVED FIXED127229
XMLTreeViewer shouldn't use the view source mode
https://bugs.webkit.org/show_bug.cgi?id=127229
Summary XMLTreeViewer shouldn't use the view source mode
Anders Carlsson
Reported 2014-01-18 11:38:59 PST
XMLTreeViewer shouldn't use the view source mode
Attachments
Patch (5.29 KB, patch)
2014-01-18 11:41 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2014-01-18 11:41:10 PST
Andreas Kling
Comment 2 2014-01-18 11:45:22 PST
Comment on attachment 221561 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=221561&action=review OK r=me > Source/WebCore/ChangeLog:8 > + Add the relevant styles from view-source.css to XMLViewer.css. I take it view-source.css is going away after this.
Anders Carlsson
Comment 3 2014-01-18 12:30:49 PST
Note You need to log in before you can comment on or make changes to this bug.