XMLTreeViewer shouldn't use the view source mode https://bugs.webkit.org/show_bug.cgi?id=127229

Reviewed by Andreas Kling.

Add the relevant styles from view-source.css to XMLViewer.css.

* xml/XMLTreeViewer.cpp:
(WebCore::XMLTreeViewer::transformDocumentToTreeView):
* xml/XMLViewer.css:
(body):
(.comment):
(.tag):
(.attribute-name):
(.attribute-value):
* xml/XMLViewer.js:
(createComment):
(createTag):
(createAttribute):

Canonical link: https://commits.webkit.org/145228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162269 268f45cc-cd09-0410-ab3c-d52691b4dbfc