Source/WebCore/xml/XMLViewer.js
@@ -284,7 +284,6 @@ function createComment(commentString)
 {
     var comment = createHTMLElement('span');
     comment.classList.add('comment');
-    comment.classList.add('webkit-html-comment');
     comment.textContent = commentString;
     return comment;
 }
@@ -307,7 +306,7 @@ function createLine()
 function createTag(node, isClosing, isEmpty)
 {
     var tag = createHTMLElement('span');
-    tag.classList.add('webkit-html-tag');
+    tag.classList.add('tag');
 
     var stringBeforeAttrs = '<';
     if (isClosing)
@@ -334,17 +333,16 @@ function createTag(node, isClosing, isEmpty)
 function createAttribute(attributeNode)
 {
     var attribute = createHTMLElement('span');
-    attribute.classList.add('webkit-html-attribute');
 
     var attributeName = createHTMLElement('span');
-    attributeName.classList.add('webkit-html-attribute-name');
+    attributeName.classList.add('attribute-name');
     attributeName.textContent = attributeNode.name;
 
     var textBefore = document.createTextNode(' ');
     var textBetween = document.createTextNode('="');
 
     var attributeValue = createHTMLElement('span');
-    attributeValue.classList.add('webkit-html-attribute-value');
+    attributeValue.classList.add('attribute-value');
     attributeValue.textContent = attributeNode.value;
 
     var textAfter = document.createTextNode('"');
